# eval-history

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
evalhistory/: __init__.py  app.py  compare.py  db.py  migrate.py  models.py  obs.py  schemas.py
migrations/: env.py
migrations/versions/: 803ec46adee9_runs_and_cases.py  93d2d5408d4b_runs_know_why_they_exist.py  b7e4c1a90f2d_runs_track_vulnerability.py  e1eeff7e129c_cases_remember_their_position.py
tests/: conftest.py  test_api.py  test_compare.py  test_crash_test_runs.py  test_migrations.py  test_obs.py  test_queries.py
